http://ondoc.myjetbrains.com/youtrack/issue/B-32 для корректной работы добавлен новый класс widget-middle (для главной страницы) и заданы размеры и overflow
@0h10min

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,13 @@ input[type="button"] {
 }
 .widget--mini {
   min-height: 435px;
+  height: 435px;
   margin-bottom: 16px;
+  overflow: auto;
+}
+.widget--middle {
+  min-height: 550px;
+  height: 550px;
   overflow: auto;
 }
 .widget-head {
@@ -660,9 +666,6 @@ input[type="button"] {
   width: 14px;
   height: 20px;
   background-position: -47px -6px;
-}
-.course-widget .progress .percent {
-  width: 70%;
 }
 /* Виджет: события - иконка */
 .widget-head .icon-event:before {
