--- a/less/widgets.less
+++ b/less/widgets.less
@@ -4,7 +4,19 @@
 	min-height: 550px;
 	border-radius: 10px;
 	box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.2);
-	&--mini{  min-height: 435px; margin-bottom: 16px;  overflow: auto;}
+
+  	&--mini{
+	  min-height: 435px;
+	  height: 435px;
+	  margin-bottom: 16px;
+	  overflow: auto;}
+
+  	&--middle{
+	  min-height: 550px;
+	  height: 550px;
+	  overflow: auto;
+	}
+
 	&-head{
 		padding: 14px 50px 11px;
 		text-align: center;
@@ -500,9 +512,6 @@
 	width: 14px;
 	height: 20px;
 	background-position: -47px -6px;
-}
-.course-widget{
-	.progress .percent{ width: 70%; }
 }
 
 /* Виджет: события - иконка */ 
